--- a/src/http/gui/app/styles/bootstrap-config.scss
+++ b/src/http/gui/app/styles/bootstrap-config.scss
@@ -1,7 +1,7 @@
 /*** Bootstrap configuration ***/
 
 // control the screen sizes
-$screen-xs-min: 300px;
+$screen-xs-min: 380px;
 $screen-sm-min: 1000px;
 $screen-md-min: 1260px; // default: 800px
 $screen-lg-min: 1860px;
