--- a/src/http/gui/app/styles/index.scss
+++ b/src/http/gui/app/styles/index.scss
@@ -6,8 +6,10 @@
   margin-top: 60px;
 
   .row-index {
-      padding-top: 60px;
-      padding-bottom: 60px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    overflow-x: hidden;
 
     p {
       line-height: 1.75;
